--- a/notebooks/Selenium.ipynb
+++ b/notebooks/Selenium.ipynb
@@ -18,8 +18,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-10T08:34:26.171857Z",
-     "start_time": "2018-02-10T08:34:23.777471Z"
+     "end_time": "2018-02-10T12:59:38.690224Z",
+     "start_time": "2018-02-10T12:59:35.872216Z"
     },
     "collapsed": false
    },
@@ -122,6 +122,8 @@
     "\n",
     "url = \"http://www.yummly.com/recipes?q=&allowedCuisine=cuisine^cuisine-spanish&noUserSettings=true\"\n",
     "driver = webdriver.Chrome('../seleniumDrivers/chromedriver')  # Optional argument, if not specified will search path.\n",
+    "# Si usamos Firefox:\n",
+    "# driver = webdriver.Firefox(executable_path='../seleniumDrivers/geckodriver')\n",
     "driver.get(url)"
    ]
   },
