Correcciones y sugerencias de Pedro Pablo al notebook de BS4

--- a/notebooks/Beautifulsoup.ipynb
+++ b/notebooks/Beautifulsoup.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Beautiful Soup (BS4)\n",
     "\n",
-    "BS4 es una librería para extraer datos de documentos con lenguajes de marcado como HTML o XML. Permite navegar por el árbol del documento, estraer datos, modificarlo, etc. Como veremos, es recomendable conocer el funcionamiento de las reglas CSS para sacar el máximo partido a esta librería.\n",
+    "BS4 es una librería para extraer datos de documentos de lenguajes de marcado como HTML o XML. Permite navegar por el árbol del documento, extraer datos, modificar dicho árbol, etc. Como veremos, es recomendable conocer el funcionamiento de las reglas CSS para sacar el máximo partido a esta librería.\n",
     "\n",
     "Como vemos en este primer ejemplo, BS4 tan solo analiza texto en formato HTML o XML. Aquí está la [documentación completa de Beautiful Soup 4.](https://www.crummy.com/software/BeautifulSoup/bs4/doc/)"
    ]
@@ -16,8 +16,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.804032Z",
-     "start_time": "2018-02-08T19:49:10.779644Z"
+     "end_time": "2018-02-12T09:45:58.657538Z",
+     "start_time": "2018-02-12T09:45:58.632631Z"
     },
     "collapsed": true
    },
@@ -39,7 +39,7 @@
     "<p class=\"story\">...</p>\n",
     "\"\"\"\n",
     "\n",
-    "# Cargamos el \n",
+    "# Cargamos el documento\n",
     "soup = BeautifulSoup(html_doc, 'lxml')"
    ]
   },
@@ -55,8 +55,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.812755Z",
-     "start_time": "2018-02-08T19:49:10.804919Z"
+     "end_time": "2018-02-12T09:46:01.024477Z",
+     "start_time": "2018-02-12T09:46:01.015741Z"
     },
     "collapsed": false
    },
@@ -81,8 +81,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.816257Z",
-     "start_time": "2018-02-08T19:49:10.813842Z"
+     "end_time": "2018-02-12T09:46:03.115672Z",
+     "start_time": "2018-02-12T09:46:03.112649Z"
     },
     "collapsed": false
    },
@@ -107,8 +107,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.819142Z",
-     "start_time": "2018-02-08T19:49:10.817050Z"
+     "end_time": "2018-02-12T09:46:04.106275Z",
+     "start_time": "2018-02-12T09:46:04.103499Z"
     },
     "collapsed": false
    },
@@ -140,8 +140,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.822294Z",
-     "start_time": "2018-02-08T19:49:10.820140Z"
+     "end_time": "2018-02-12T09:46:06.748211Z",
+     "start_time": "2018-02-12T09:46:06.744980Z"
     },
     "collapsed": false
    },
@@ -166,8 +166,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.825397Z",
-     "start_time": "2018-02-08T19:49:10.823038Z"
+     "end_time": "2018-02-12T09:46:08.688569Z",
+     "start_time": "2018-02-12T09:46:08.686233Z"
     },
     "collapsed": false
    },
@@ -200,8 +200,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.832124Z",
-     "start_time": "2018-02-08T19:49:10.829810Z"
+     "end_time": "2018-02-12T09:46:10.601782Z",
+     "start_time": "2018-02-12T09:46:10.599100Z"
     },
     "collapsed": false
    },
@@ -226,8 +226,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.839354Z",
-     "start_time": "2018-02-08T19:49:10.836998Z"
+     "end_time": "2018-02-12T09:46:12.153044Z",
+     "start_time": "2018-02-12T09:46:12.150056Z"
     },
     "collapsed": false
    },
@@ -252,8 +252,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.846229Z",
-     "start_time": "2018-02-08T19:49:10.843968Z"
+     "end_time": "2018-02-12T09:46:13.674113Z",
+     "start_time": "2018-02-12T09:46:13.671311Z"
     },
     "collapsed": false
    },
@@ -288,8 +288,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.855774Z",
-     "start_time": "2018-02-08T19:49:10.853117Z"
+     "end_time": "2018-02-12T09:46:15.769377Z",
+     "start_time": "2018-02-12T09:46:15.766294Z"
     },
     "collapsed": false
    },
@@ -316,8 +316,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.864213Z",
-     "start_time": "2018-02-08T19:49:10.861429Z"
+     "end_time": "2018-02-12T09:46:17.262039Z",
+     "start_time": "2018-02-12T09:46:17.259129Z"
     },
     "collapsed": false
    },
@@ -342,8 +342,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.870795Z",
-     "start_time": "2018-02-08T19:49:10.868910Z"
+     "end_time": "2018-02-12T09:46:18.120583Z",
+     "start_time": "2018-02-12T09:46:18.117900Z"
     },
     "collapsed": false
    },
@@ -373,8 +373,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.881199Z",
-     "start_time": "2018-02-08T19:49:10.878629Z"
+     "end_time": "2018-02-12T09:46:21.080856Z",
+     "start_time": "2018-02-12T09:46:21.078162Z"
     },
     "collapsed": false
    },
@@ -412,8 +412,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.892259Z",
-     "start_time": "2018-02-08T19:49:10.889505Z"
+     "end_time": "2018-02-12T09:46:24.184796Z",
+     "start_time": "2018-02-12T09:46:24.181515Z"
     },
     "collapsed": false
    },
@@ -443,8 +443,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:10.909591Z",
-     "start_time": "2018-02-08T19:49:10.906783Z"
+     "end_time": "2018-02-12T09:46:25.481784Z",
+     "start_time": "2018-02-12T09:46:25.478586Z"
     },
     "collapsed": false
    },
@@ -480,8 +480,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:11.152212Z",
-     "start_time": "2018-02-08T19:49:10.924132Z"
+     "end_time": "2018-02-12T09:46:27.322838Z",
+     "start_time": "2018-02-12T09:46:27.093905Z"
     },
     "collapsed": false
    },
@@ -564,8 +564,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:12.065995Z",
-     "start_time": "2018-02-08T19:49:11.153060Z"
+     "end_time": "2018-02-12T09:46:31.331475Z",
+     "start_time": "2018-02-12T09:46:30.613868Z"
     },
     "collapsed": false
    },
@@ -598,8 +598,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:12.179706Z",
-     "start_time": "2018-02-08T19:49:12.067055Z"
+     "end_time": "2018-02-12T09:46:33.101090Z",
+     "start_time": "2018-02-12T09:46:32.981480Z"
     },
     "collapsed": false
    },
@@ -680,8 +680,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:12.294867Z",
-     "start_time": "2018-02-08T19:49:12.180696Z"
+     "end_time": "2018-02-12T09:46:37.915598Z",
+     "start_time": "2018-02-12T09:46:37.802315Z"
     },
     "collapsed": false
    },
@@ -771,8 +771,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:12.425730Z",
-     "start_time": "2018-02-08T19:49:12.295810Z"
+     "end_time": "2018-02-12T09:46:43.440179Z",
+     "start_time": "2018-02-12T09:46:43.300544Z"
     },
     "collapsed": false
    },
@@ -838,8 +838,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:14.597337Z",
-     "start_time": "2018-02-08T19:49:12.426653Z"
+     "end_time": "2018-02-12T09:46:51.268004Z",
+     "start_time": "2018-02-12T09:46:49.123850Z"
     },
     "collapsed": false
    },
@@ -890,8 +890,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:21.267628Z",
-     "start_time": "2018-02-08T19:49:14.598346Z"
+     "end_time": "2018-02-12T09:47:01.837739Z",
+     "start_time": "2018-02-12T09:46:55.137106Z"
     },
     "collapsed": false
    },
@@ -910,7 +910,7 @@
    "source": [
     "def procesaPaginaCatalogo(url, prefix, productList):\n",
     "    \"\"\"\n",
-    "    Devuelve True si hemos llegado al final del catálogo, False en otro caso\n",
+    "    Devuelve False si hemos llegado al final del catálogo, True en otro caso\n",
     "    \"\"\"\n",
     "     # Realizamos la petición a la web\n",
     "    req = requests.get(url)\n",
@@ -929,15 +929,15 @@
     "            producto = procesarPagina(prefix+enlace['href'])\n",
     "            producto['enlace'] = prefix+enlace['href']\n",
     "            productList.append(producto)\n",
-    "        return False\n",
+    "        return True\n",
     "    \n",
     "    if statusCode == 404:\n",
-    "        return True\n",
+    "        return False\n",
     "        \n",
     "listaProductos = []\n",
     "# Probamos solo con las dos últimas páginas\n",
     "i=48\n",
-    "while ( not procesaPaginaCatalogo(\"http://books.toscrape.com/catalogue/page-{}.html\".format(i), \"http://books.toscrape.com/catalogue/\", listaProductos)):\n",
+    "while ( procesaPaginaCatalogo(\"http://books.toscrape.com/catalogue/page-{}.html\".format(i), \"http://books.toscrape.com/catalogue/\", listaProductos)):\n",
     "    i=i+1\n",
     "\n",
     "len(listaProductos)"
@@ -955,8 +955,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:21.516214Z",
-     "start_time": "2018-02-08T19:49:21.268787Z"
+     "end_time": "2018-02-12T09:47:43.532292Z",
+     "start_time": "2018-02-12T09:47:43.055607Z"
     },
     "collapsed": false
    },
@@ -981,8 +981,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-08T19:49:21.913431Z",
-     "start_time": "2018-02-08T19:49:21.517249Z"
+     "end_time": "2018-02-12T09:49:09.148764Z",
+     "start_time": "2018-02-12T09:49:08.331172Z"
     },
     "collapsed": false
    },
@@ -1420,7 +1420,7 @@
     "        celdas=r.find_all('td')\n",
     "        # Nos quedamos con el contenido\n",
     "        if len(celdas)>0:\n",
-    "            # En lugar de un separador de miles, se ha usado un caracter parecido a un espacio en blanco\n",
+    "            # En lugar de un separador de miles, la Wikipedia usa un espacio en blanco no separable (&nbsp;)\n",
     "            # por lo que en la celda de habitantes hay que eliminar todos los caracteres que no sean números\n",
     "            content.append([celdas[0].string, ''.join(c for c in celdas[1].string if c.isdigit())])\n",
     "        \n",
@@ -1431,15 +1431,6 @@
     "df = pd.DataFrame(content, columns= ['Nombre', 'Habitantes'])\n",
     "df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
