Correcciones y sugerencias de Pedro Pablo al notebook de Selenium

--- a/notebooks/Selenium.ipynb
+++ b/notebooks/Selenium.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Web scraping con Selenium\n",
     "\n",
-    "Hay ocasiones en las que la descarga de la página/sitio web y su posterior procesamiento con BeautifulSoup no es suficiente. Esto puede deberse a que el sitio del que queremos extraer los datos es un SPA (_Single Page Application_), está protegido por un login (mucho cuidado) o a que necesitamos, por ejemplo, interactuar con el sitio, ya sea rellenando formularios o pulsando en algún enlace.\n",
+    "Hay ocasiones en las que la descarga de la página/sitio web y su posterior procesamiento con BeautifulSoup no es suficiente. Esto puede deberse a que el sitio del que queremos extraer los datos es una SPA (_Single Page Application_), está protegido por un login (mucho cuidado con los Términos de Uso) o a que necesitamos, por ejemplo, interactuar con el sitio, ya sea rellenando formularios o pulsando en algún enlace.\n",
     "\n",
     "A modo de ejemplo vamos a buscar cuántas recetas de comida española hay en el sitio web Yummly. Se puede acceder a estas recetas a través de esta URL:\n",
     "\n",
@@ -752,7 +752,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Un detalle curioso es que solo vemos los nombres de los cursos **que están visibles en el navegador**. Esto nos permite hacer lo que se conoce como **screen scraping**, es decir, solo podemos cosechar los datos que puede ver un usuario humano interactuando con el navegador.\n",
+    "Un detalle curioso es que solo vemos los nombres de los cursos **que están visibles en el navegador**. Esto se debe a que muchos de los cursos están ocultos mediante lo que se conoce como un \"acordeón\". Esto nos permite hacer lo que se conoce como **screen scraping**, es decir, solo podemos cosechar los datos que puede ver un usuario humano interactuando con el navegador.\n",
     "\n",
     "Por este motivo, en este caso nos puede resultar más interesante procesar este catálogo con BS4 (que procesa el HTML tal cual, ignorando lo que ve o no ve el usuario)."
    ]
